src/flake8_quotes/snapshots/ruff__flake8_quotes__checks__tests__doubles_doubles_multiline_string.py.snap
---
source: src/flake8_quotes/checks.rs
expression: checks
---
- kind:
    BadQuotesMultilineString: single
  location:
    row: 1
    column: 5
  end_location:
    row: 3
    column: 13
  fix: ~

