src/flake8_quotes/snapshots/ruff__flake8_quotes__checks__tests__single_docstring_docstring_doubles.py.snap
---
source: src/flake8_quotes/checks.rs
expression: checks
---
- kind:
    BadQuotesDocstring: single
  location:
    row: 1
    column: 1
  end_location:
    row: 3
    column: 4
  fix: ~
- kind:
    BadQuotesDocstring: single
  location:
    row: 12
    column: 5
  end_location:
    row: 14
    column: 8
  fix: ~
- kind:
    BadQuotesDocstring: single
  location:
    row: 24
    column: 9
  end_location:
    row: 26
    column: 12
  fix: ~

