src/flake8_quotes/snapshots/ruff__flake8_quotes__checks__tests__single_docstring_docstring_doubles_class.py.snap
---
source: src/flake8_quotes/checks.rs
expression: checks
---
- kind:
    BadQuotesDocstring: single
  location:
    row: 2
    column: 5
  end_location:
    row: 2
    column: 54
  fix: ~
- kind:
    BadQuotesDocstring: single
  location:
    row: 6
    column: 9
  end_location:
    row: 6
    column: 58
  fix: ~
- kind:
    BadQuotesDocstring: single
  location:
    row: 9
    column: 29
  end_location:
    row: 9
    column: 53
  fix: ~

