src/flake8_quotes/snapshots/ruff__flake8_quotes__checks__tests__single_docstring_docstring_singles.py.snap
---
source: src/flake8_quotes/checks.rs
expression: checks
---
- kind:
    BadQuotesMultilineString: double
  location:
    row: 5
    column: 1
  end_location:
    row: 7
    column: 4
  fix: ~
- kind:
    BadQuotesMultilineString: double
  location:
    row: 11
    column: 21
  end_location:
    row: 13
    column: 4
  fix: ~
- kind:
    BadQuotesMultilineString: double
  location:
    row: 18
    column: 5
  end_location:
    row: 20
    column: 8
  fix: ~
- kind:
    BadQuotesMultilineString: double
  location:
    row: 23
    column: 21
  end_location:
    row: 24
    column: 38
  fix: ~
- kind:
    BadQuotesMultilineString: double
  location:
    row: 32
    column: 9
  end_location:
    row: 34
    column: 12
  fix: ~
- kind:
    BadQuotesMultilineString: double
  location:
    row: 37
    column: 13
  end_location:
    row: 39
    column: 16
  fix: ~

