src/flake8_quotes/snapshots/ruff__flake8_quotes__checks__tests__single_docstring_docstring_singles_module_multiline.py.snap
---
source: src/flake8_quotes/checks.rs
expression: checks
---
- kind:
    BadQuotesMultilineString: double
  location:
    row: 4
    column: 1
  end_location:
    row: 6
    column: 4
  fix: ~
- kind:
    BadQuotesMultilineString: double
  location:
    row: 9
    column: 1
  end_location:
    row: 11
    column: 4
  fix: ~

